add corner case tests in toll api